@@ -52,8 +52,6 @@ RewriteRule (.*)neuvede(.*) $1lastupby$2 [NC]
 
 RewriteRule (.*)neuve(.*) $1lastup$2 [NC]
 
-RewriteRule (.*)diaporama(.*) $1slideshow$2 [NC]
-
 RewriteRule (.*)recherche(.*) $1search$2 [NC]
 
 RewriteRule (.*)enhaut(.*) $1top_display_media$2 [NC]
@@ -111,11 +109,11 @@ RewriteRule displayimage-([a-z0-9]+)-([\-]?[0-9]+)-([\-]?[0-9]+)-([\-]?[0-9]+)-(
 
 RewriteRule displayimage-([a-z0-9]+)-([\-]?[0-9]+)-([\-]?[0-9]+)-([\-]?[0-9]+)\.html(.*) displayimage.php?album=$1&cat=$2&pid=$3&uid=$4$5 [NC]
 
-RewriteRule displayimage-([a-z0-9]+)-([\-]?[0-9]+)-([\-]?[0-9]+)\.html(.*) displayimage.php?album=$1&cat=$2&pid=$3$4 [NC]
+RewriteRule displayimage-([a-z0-9]+)-([\-]?[0-9]+)-([\-]?[0-9]+).*\.html(.*) displayimage.php?album=$1&cat=$2&pid=$3$4 [NC]
 
-RewriteRule displayimage-([a-z0-9]+)-([\-]?[0-9]+)\.html(.*) displayimage.php?album=$1&pid=$2$3 [NC]
+RewriteRule displayimage-([a-z0-9]+)-([\-]?[0-9]+).*\.html(.*) displayimage.php?album=$1&pid=$2$3 [NC]
 
-RewriteRule displayimage-([0-9]+)\.html(.*) displayimage.php?pid=$1$2 [NC]
+RewriteRule displayimage-([0-9]+).*\.html(.*) displayimage.php?pid=$1$2 [NC]
 
 
 #
